# llm-costtracker

./: .gitignore  LICENSE  README.md  costtrack.toml.example  main.py  pyproject.toml
costtracker/: __init__.py  calculator.py  cli.py  config.py  decorators.py  exceptions.py  extractor.py  formatter.py  logger.py  pricing.py  pricing_loader.py  state.py  tracker.py
costtracker/extractor/: __init__.py  base.py  gemini_extractor.py  openai_extractor.py
costtracker/utils/: provider_detector.py
examples/: basic_usage.py
