[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "costtracker"
version = "0.1.0"
description = "Simple and lightweight Python package to track LLM API cost"
authors = [
    {name="Vishal Verma"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "python-dotenv",
    "google-genai"
]

[project.scripts]
costtracker="costtracker.cli:cli"
